Wed Mar 16 17:30:00 1995 Keith Vetter (keithv@fusion.com)

	* com_err.h: problem with this file needing k5-config for windows
	   stuff but many application programs don't include it. So for
	   now I've put the windows stuff that is needed directly into it.

Wed Mar 15 23:02:14 1995 Keith Vetter (keithv@fusion.com)

	* com_err.c: made to work on the PC. Biggest changes was that
           the error message now gets built in a buffer and either gets
           printed to stderr or for Windows gets displays in a message box.
        * err_message.c: fixed up includes and some 32/16 bit ints.
        * et_name.c: changed two ints into longs.
        * com_err.h: added windows keyword INTERFACE to prototypes.
        * error_table.h: Added some windows specific defines since this
           source doesn't really know about k5-config.h. Also, added 
           prototype for error_table_name().
	* Makefile.in: PC rules to make com_err, err_message and et_name.

Tue Feb 28 13:23:58 1995  Theodore Y. Ts'o  <tytso@dcl>

	* error_table.h: Remove #ifdef STDC check to see if we should use
		const --- configure takes care of this.

Tue Feb 28 01:35:14 1995  John Gilmore  (gnu at toad.com)

	* com_err.3:  Document "com_err.h" rather than <com_err.h>.

Fri Feb  3 08:11:26 1995  Theodore Y. Ts'o  (tytso@dcl)

	* com_err.h: All routines defined in the com_err library should
		have extern before the prototypes.   (Required for SGI
		platform).

Wed Jan 25 20:48:50 1995  Mark Eichin  (eichin@tweedledumber.cygnus.com)

	* Makefile.in (SRCS): add com_err.c explicit dependency to work
	around VPATH bug in Solaris make. Also fix typo in comment.

Fri Nov 18 00:34:29 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: add caching to perror check (from epeisach).

Fri Oct 21 21:06:48 1994    (tytso@rsx-11)

	* Makefile.in (SED): Don't specify an explicit pathname for sed.

Tue Oct 11 12:43:00 1994  Theodore Y. Ts'o  (tytso@dcl)
