@@ -21,7 +21,7 @@ if test $krb5_cv_decl_perror = yes; then
 	AC_DEFINE(HDR_HAS_PERROR)
 fi
 dnl
-CHECK_STDARG
+AC_CHECK_HEADERS(stdarg.h)
 AC_HAVE_HEADERS(stdlib.h)
 CopySrcHeader(com_err.h,$(BUILDTOP)/include)
 V5_AC_OUTPUT_MAKEFILE
